Add Java reflection permissions